--- a/ex007-setAttribute.html
+++ b/ex007-setAttribute.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ex007</title>
+    <title>setAttribute</title>
 </head>
 <body>
     <p id="meuParagrafo">Texto inicial</p>
