--- a/ex001-addEventListener-click.html
+++ b/ex001-addEventListener-click.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ex01</title>
+    <title>addEventeListener - click</title>
 </head>
 <body>
     <button id="meuBotao">Clique aqui</button>
