--- a/ex003-addEventListener-keydown.html
+++ b/ex003-addEventListener-keydown.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ex03</title>
+    <title>addEventeListener - keydown</title>
 </head>
 
 <body>
